PRL-4411 - Added changes to populate & display documents in reply message